# clothes_scrapping

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
app/modules/: get_all_products_from_collection.py  get_all_products_from_shop.py
infra/: get_last_price.sh
schema/: product.py
scrapper/: scrap.py
src/: get_all_products_links.py
src/links_getter/: get_all_collection_links.py  get_all_products_links.py  get_product_links_from_page.py
src/scrapper/: scrap.py
src/test/: get_link_first_product.py
tests/: test__app__modules__get_all_products_from_collection.py  test__infra__get_last_price.sh  test__src__get_all_products_links.py  test__src__links_getter__get_all_collection_links.py  test__src__links_getter__get_all_products_links.py  test__src__links_getter__get_product_links_from_page.py  test__src__scrapper__scrap.py  test__unit__get_link_first_product.py  test__unit__scrap.py  test__unit__src_scrapper__scrap.py
tests/assets/: example_skirt_000.html
