[tool.poetry]
name = "data-engineer-test"
version = "0.0.1"
description = ""
authors = ["Lluna Sanz <llunasanz@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.4"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
